--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Fondo para la página */
 body {
     background: lightgray;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Borde del Contenedor principal */
@@ -11,6 +11,7 @@ body {
     margin: 0px auto;
 }
 
+/* Barra de titulo */
 header {
     background: red;
     width: 100%;
@@ -19,14 +20,14 @@ header {
     text-align: center;
     line-height: 50px;
     color: white;
-    border-bottom: dashed black;
+    border-bottom: 5px dashed black;
     float: left;
 }
-/* -------------------- */
+
 /* Barra de navegación */
-/* -------------------- */
 nav {
     background: purple;
+    margin: 0px;
     height: 50px;
     width: 100%;
     float: left;
@@ -36,7 +37,7 @@ nav {
 nav ul li {
     margin: 10px;
     float: left;
-    margin-right: 40px;
+    margin-right: 30px;
     color: white;
 }
 
@@ -60,7 +61,7 @@ nav ul li a {
 
 #contenido article {
     margin: 5px;
-    border: 1px solid rgb(109, 26, 40);
+    border: 1px solid rgb(238, 232, 25);
     border-radius: 5px;
 }
 
